# CLibraryTemplate

./: .clang-format  .clangd.in  .gitignore.in  CMakeLists.txt  CMakeLists.txt.in  License.in  sync.lua
.github/workflows/: build.yml.in  ci.yml.in  format.yml.in
Lib/: Version.h.in
docs/: Contributing.md.in  Guidelines.md.in  Readme.md.in  Security.md
